--- a/UMES-DD-1P-01-2025/UMES-DD-1P-01-2025-SHARON-NOJ/index.html
+++ b/UMES-DD-1P-01-2025/UMES-DD-1P-01-2025-SHARON-NOJ/index.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRIMER PARCIAL</title>
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="PRIMER PARCIAL">
-    <meta property="og:image" content="c:\Users\sharo\OneDrive\Escritorio\UMES-DD-1P-01-2025\LOGO.jpg">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Examen Parcial</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>PRIMER PARCIAL</h1>
+        <h1>Primer Parcial</h1>
     </header>
-    <div class="container" style="display: block;">
-        <p>¿Qué es Lorem Ipsum?
+    <main>
+        <p><br>¿Qué es Lorem Ipsum?
             Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. 
             Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, 
             cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una 
@@ -24,7 +20,7 @@
             electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la 
             creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente 
             con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
-            ¿Por qué lo usamos?
+            <br><br>¿Por qué lo usamos?
             Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un 
             sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos
             normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". 
@@ -32,7 +28,7 @@
             usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado 
             muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a 
             través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).
-            ¿De dónde viene?
+            <br><br>¿De dónde viene?
             Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raices 
             en una pieza clasica de la literatura del Latin, que data del año 45 antes de Cristo, haciendo que este adquiera mas 
             de 2000 años de antiguedad. Richard McClintock, un profesor de Latin de la Universidad de Hampden-Sydney en Virginia, 
@@ -44,7 +40,7 @@
             El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados. 
             Las secciones 1.10.32 y 1.10.33 de "de Finibus Bonorum et Malorum" por Cicero son también reproducidas en su forma original 
             exacta, acompañadas por versiones en Inglés de la traducción realizada en 1914 por H. Rackham.
-            ¿Dónde puedo conseguirlo?
+            <br><br>¿Dónde puedo conseguirlo?
             Hay muchas variaciones de los pasajes de Lorem Ipsum disponibles, pero la mayoría sufrió alteraciones en alguna manera, 
             ya sea porque se le agregó humor, o palabras aleatorias que no parecen ni un poco creíbles. Si vas a utilizar un pasaje 
             de Lorem Ipsum, necesitás estar seguro de que no hay nada avergonzante escondido en el medio del texto. Todos los generadores 
@@ -52,14 +48,23 @@
             único generador verdadero (válido) en la Internet. Usa un diccionario de mas de 200 palabras provenientes del latín, combinadas 
             con estructuras muy útiles de sentencias, para generar texto de Lorem Ipsum que parezca razonable. Este Lorem Ipsum generado siempre 
             estará libre de repeticiones, humor agregado o palabras no características del lenguaje, etc.</p>
-    </div>
+    </main>
+    <footer>
+        <div class="footer-content">
+            <span class="left">Sharon Adelaida Noj Pineda</span>
+            <span class="right">DESARROLO WEB-UMES-2025</span>
+        </div>
+    </footer>
+    
     <script>
-        function showSection(section) {
-            document.querySelectorAll('.container').forEach(div => {
-                div.style.display = 'none';
-            });
-            document.querySelector('.' + section).style.display = 'block';
-        }
+        window.onscroll = function() {
+            let footer = document.querySelector('footer');
+            if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+                footer.style.display = 'block';
+            } else {
+                footer.style.display = 'none';
+            }
+        };
     </script>
 </body>
 </html>
